# UEDocs

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile.in  SETUP.py  conf.py  cookiecutter.json  index.rst  index.rst.in  requirements.txt
DocFiles/: index.rst.in
filter/doxygen/: filter_ue_macros.py
python_helpers/: UEProjectUtil.py  clean.py  console.py  project_generator.py
python_helpers/models/: ProjectModel.py  module_model.py  project_model.py
{{cookiecutter.directory_name}}/: Doxyfile.in  conf.py
